--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
